--- a/frontend/src/assets/css/TableCss/TableManage.css
+++ b/frontend/src/assets/css/TableCss/TableManage.css
@@ -131,3 +131,16 @@ h2 {
   background-color: #007bff;
   opacity: .2;
   border: 2px solid #007bff; }
+
+  @keyframes vibrate {
+    0% { transform: translateX(0); }
+    25% { transform: translateX(-3px); }
+    50% { transform: translateX(3px); }
+    75% { transform: translateX(-3px); }
+    100% { transform: translateX(0); }
+  }
+  
+  .vibrate {
+    animation: vibrate 0.3s ease-in-out;
+  }
+  
